Composite shenanigans