@@ -6,7 +6,6 @@ import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import edu.unizg.foi.uzdiz.dblazevic21.app.composite.TuristickiElement;
 import edu.unizg.foi.uzdiz.dblazevic21.app.modeli.rezervacije.Rezervacija;
@@ -15,39 +14,45 @@ import edu.unizg.foi.uzdiz.dblazevic21.app.statusi.aranzmani.UPripremiConcreteSt
 import edu.unizg.foi.uzdiz.dblazevic21.app.statusi.rezervacije.AktivnaConcreteState;
 import edu.unizg.foi.uzdiz.dblazevic21.app.statusi.rezervacije.NaCekanjuConcreteState;
 import edu.unizg.foi.uzdiz.dblazevic21.app.statusi.rezervacije.OtkazanaConcreteState;
-import edu.unizg.foi.uzdiz.dblazevic21.app.statusi.rezervacije.PrimljenaConcreteState;
 
 public class Aranzmani implements TuristickiElement
 {
-    private final int oznaka;
-    private final String naziv;
-    private final String program;
-    private final LocalDate pocetniDatum;
-    private final LocalDate zavrsniDatum;
-    private final LocalTime vrijemeKretanja;
-    private final LocalTime vrijemePovratka;
-    private final float cijena;
-    private final int minBrojPutnika;
-    private final int maksBrojPutnika;
-    private final int brojNocenja;
-    private final float doplataSobe;
-    private final String prijevoz;
-    private final int brojDorucka;
-    private final int brojRucka;
-    private final int brojVecera;
+    private int oznaka;
+    private String naziv;
+    private String program;
+    private LocalDate pocetniDatum;
+    private LocalDate zavrsniDatum;
+    private LocalTime vrijemeKretanja;
+    private LocalTime vrijemePovratka;
+    private float cijena;
+    private int minBrojPutnika;
+    private int maksBrojPutnika;
+    private int brojNocenja;
+    private float doplataSobe;
+    private String prijevoz;
+    private int brojDorucka;
+    private int brojRucka;
+    private int brojVecera;
 
+    private final List<Rezervacija> rezervacije;
     private AranzmaniState status;
-    
-    private final List<Rezervacija> rezervacije = new ArrayList<>();
     private long brojacRezervacija = 0;
-    
+
     private static final Comparator<LocalDateTime> LDT_ORDER = 
         Comparator.nullsLast(Comparator.<LocalDateTime>naturalOrder());
 
-    public Aranzmani(int oznaka, String naziv, String program, LocalDate pocetniDatum,
-                     LocalDate zavrsniDatum, LocalTime vrijemeKretanja, LocalTime vrijemePovratka,
-                     float cijena, int minBrojPutnika, int maksBrojPutnika, int brojNocenja,
-                     float doplataSobe, String prijevoz, int brojDorucka, int brojRucka, int brojVecera) 
+    public Aranzmani() 
+    {
+        this.rezervacije = new ArrayList<>();
+        this.status = new UPripremiConcreteState();
+    }
+
+    public Aranzmani(int oznaka, String naziv, String program,
+                     LocalDate pocetniDatum, LocalDate zavrsniDatum,
+                     LocalTime vrijemeKretanja, LocalTime vrijemePovratka,
+                     float cijena, int minBrojPutnika, int maksBrojPutnika,
+                     int brojNocenja, float doplataSobe, String prijevoz,
+                     int brojDorucka, int brojRucka, int brojVecera)
     {
         this.oznaka = oznaka;
         this.naziv = naziv;
@@ -65,13 +70,194 @@ public class Aranzmani implements TuristickiElement
         this.brojDorucka = brojDorucka;
         this.brojRucka = brojRucka;
         this.brojVecera = brojVecera;
+        this.rezervacije = new ArrayList<>();
         this.status = new UPripremiConcreteState();
     }
-    
+
+    public void setOznaka(int oznaka) 
+    {
+        this.oznaka = oznaka;
+    }
+
+    public void setNaziv(String naziv) 
+    {
+        this.naziv = naziv;
+    }
+
+    public void setProgram(String program) 
+    {
+        this.program = program;
+    }
+
+    public void setPocetniDatum(LocalDate pocetniDatum) 
+    {
+        this.pocetniDatum = pocetniDatum;
+    }
+
+    public void setZavrsniDatum(LocalDate zavrsniDatum) 
+    {
+        this.zavrsniDatum = zavrsniDatum;
+    }
+
+    public void setVrijemeKretanja(LocalTime vrijemeKretanja) 
+    {
+        this.vrijemeKretanja = vrijemeKretanja;
+    }
+
+    public void setVrijemePovratka(LocalTime vrijemePovratka) 
+    {
+        this.vrijemePovratka = vrijemePovratka;
+    }
+
+    public void setCijena(float cijena) 
+    {
+        this.cijena = cijena;
+    }
+
+    public void setMinBrojPutnika(int minBrojPutnika) 
+    {
+        this.minBrojPutnika = minBrojPutnika;
+    }
+
+    public void setMaksBrojPutnika(int maksBrojPutnika) 
+    {
+        this.maksBrojPutnika = maksBrojPutnika;
+    }
+
+    public void setBrojNocenja(int brojNocenja) 
+    {
+        this.brojNocenja = brojNocenja;
+    }
+
+    public void setDoplataSobe(float doplataSobe) 
+    {
+        this.doplataSobe = doplataSobe;
+    }
+
+    public void setPrijevoz(String prijevoz) 
+    {
+        this.prijevoz = prijevoz;
+    }
+
+    public void setBrojDorucka(int brojDorucka) 
+    {
+        this.brojDorucka = brojDorucka;
+    }
+
+    public void setBrojRucka(int brojRucka) 
+    {
+        this.brojRucka = brojRucka;
+    }
+
+    public void setBrojVecera(int brojVecera) 
+    {
+        this.brojVecera = brojVecera;
+    }
+
+    public int getOznaka() 
+    { 
+        return oznaka; 
+    }
+
+    public String getNaziv() 
+    { 
+        return naziv; 
+    }
+
+    public String getProgram() 
+    { 
+        return program; 
+    }
+
+    public LocalDate getPocetniDatum() 
+    { 
+        return pocetniDatum; 
+    }
+
+    public LocalDate getZavrsniDatum() 
+    { 
+        return zavrsniDatum; 
+    }
+
+    public LocalTime getVrijemeKretanja() 
+    { 
+        return vrijemeKretanja; 
+    }
+
+    public LocalTime getVrijemePovratka() 
+    { 
+        return vrijemePovratka; 
+    }
+
+    public float getCijena() 
+    { 
+        return cijena; 
+    }
+
+    public int getMinBrojPutnika() 
+    { 
+        return minBrojPutnika; 
+    }
+
+    public int getMaksBrojPutnika() 
+    { 
+        return maksBrojPutnika; 
+    }
+
+    public int getBrojNocenja() 
+    { 
+        return brojNocenja; 
+    }
+
+    public float getDoplataSobe() 
+    { 
+        return doplataSobe; 
+    }
+
+    public String getPrijevoz() 
+    { 
+        return prijevoz; 
+    }
+
+    public int getBrojDorucka() 
+    { 
+        return brojDorucka; 
+    }
+
+    public int getBrojRucka() 
+    { 
+        return brojRucka; 
+    }
+
+    public int getBrojVecera() 
+    { 
+        return brojVecera; 
+    }
+
+    public List<Rezervacija> getRezervacije() 
+    {
+        return new ArrayList<>(rezervacije);
+    }
+
+    public AranzmaniState getStatus() 
+    { 
+        return status; 
+    }
+
+    public void setStatus(AranzmaniState status) 
+    { 
+        this.status = status; 
+    }
+
+    public String getStatusNaziv() 
+    {
+        return status.getNaziv();
+    }
+
     @Override
     public String getOpis() 
     {
-        return "Aranžman: " + naziv + " (" + oznaka + ") - " + rezervacije.size() + " rezervacija";
+        return "Aranžman: " + naziv + " [" + status.getNaziv() + "]";
     }
 
     @Override
@@ -82,237 +268,111 @@ public class Aranzmani implements TuristickiElement
                 .count();
     }
 
-    public void dodajRezervaciju(String ime, String prezime, LocalDateTime datumVrijeme) 
+    public void dodajRezervaciju(String ime, String prezime, LocalDateTime datumVrijeme)
     {
-        Rezervacija r = new Rezervacija(++brojacRezervacija, ime, prezime, this.oznaka, datumVrijeme);
+        Rezervacija r = new Rezervacija(++brojacRezervacija, ime, prezime, oznaka, datumVrijeme);
         rezervacije.add(r);
         azurirajStatuseRezervacija();
+        status.azuriraj(this, getBrojAktivnihRezervacija());
     }
 
-    public void dodajRezervaciju(String ime, String prezime, String datumVrijemeRaw) 
+    public void dodajRezervaciju(String ime, String prezime, String datumVrijemeRaw)
     {
-        Rezervacija r = new Rezervacija(++brojacRezervacija, ime, prezime, this.oznaka, datumVrijemeRaw);
+        Rezervacija r = new Rezervacija(++brojacRezervacija, ime, prezime, oznaka, datumVrijemeRaw);
         rezervacije.add(r);
         azurirajStatuseRezervacija();
-    }
-    
-    public void dodajRezervaciju(Rezervacija rezervacija)
-    {
-        rezervacije.add(rezervacija);
+        status.azuriraj(this, getBrojAktivnihRezervacija());
     }
 
-    public boolean ukloniRezervaciju(String ime, String prezime) 
+    public boolean imaRezervaciju(String ime, String prezime)
     {
+        String i = (ime == null) ? "" : ime.trim();
+        String p = (prezime == null) ? "" : prezime.trim();
+
+        return rezervacije.stream()
+                .anyMatch(r -> equalsIgnorirajCase(r.getIme(), i)
+                        && equalsIgnorirajCase(r.getPrezime(), p)
+                        && !(r.getStatus() instanceof OtkazanaConcreteState));
+    }
+
+    public boolean ukloniRezervaciju(String ime, String prezime)
+    {
+        String i = (ime == null) ? "" : ime.trim();
+        String p = (prezime == null) ? "" : prezime.trim();
+
         Rezervacija cilj = rezervacije.stream()
-                .filter(r -> equalsIgnorirajCase(r.getIme(), ime)
-                        && equalsIgnorirajCase(r.getPrezime(), prezime)
+                .filter(r -> equalsIgnorirajCase(r.getIme(), i)
+                        && equalsIgnorirajCase(r.getPrezime(), p)
                         && !(r.getStatus() instanceof OtkazanaConcreteState))
                 .min(Comparator
                         .comparing(Rezervacija::getDatumVrijeme, LDT_ORDER)
                         .thenComparingLong(Rezervacija::getRedniBroj))
                 .orElse(null);
 
-        if (cilj == null) 
-        {
-            return false;
-        }
+        if (cilj == null) return false;
 
         boolean bilaAktivna = cilj.getStatus() instanceof AktivnaConcreteState;
-        
-        cilj.setStatus(new OtkazanaConcreteState());
-        cilj.setOtkazanoAt(LocalDateTime.now());
 
-        if (bilaAktivna) 
+        cilj.otkazi();
+
+        if (bilaAktivna)
         {
-            promovirajSaCekanja();
+            Rezervacija naCekanju = rezervacije.stream()
+                    .filter(r -> r.getStatus() instanceof NaCekanjuConcreteState)
+                    .min(Comparator
+                            .comparing(Rezervacija::getDatumVrijeme, LDT_ORDER)
+                            .thenComparingLong(Rezervacija::getRedniBroj))
+                    .orElse(null);
+
+            if (naCekanju != null)
+            {
+                naCekanju.aktiviraj();
+            }
         }
-        
-        azurirajStatuseRezervacija();
+
+        status.azuriraj(this, getBrojAktivnihRezervacija());
         return true;
     }
 
-    public List<Rezervacija> getRezervacije() 
+    private void azurirajStatuseRezervacija()
     {
-        return new ArrayList<>(rezervacije);
-    }
-
-    public List<Rezervacija> getAktivneRezervacije() 
-    {
-        return rezervacije.stream()
+        List<Rezervacija> aktivne = rezervacije.stream()
                 .filter(r -> !(r.getStatus() instanceof OtkazanaConcreteState))
                 .sorted(Comparator
                         .comparing(Rezervacija::getDatumVrijeme, LDT_ORDER)
                         .thenComparingLong(Rezervacija::getRedniBroj))
-                .collect(Collectors.toList());
-    }
+                .toList();
 
-    public void azurirajStatuseRezervacija() 
-    {
-        List<Rezervacija> aktivneRez = rezervacije.stream()
-                .filter(r -> !(r.getStatus() instanceof OtkazanaConcreteState))
-                .sorted(Comparator
-                        .comparing(Rezervacija::getDatumVrijeme, LDT_ORDER)
-                        .thenComparingLong(Rezervacija::getRedniBroj))
-                .collect(Collectors.toList());
-
-        int brojRezervacija = aktivneRez.size();
-
-        if (brojRezervacija < minBrojPutnika) 
+        int count = 0;
+        for (Rezervacija r : aktivne)
         {
-            for (Rezervacija r : aktivneRez) 
+            if (aktivne.size() < minBrojPutnika)
             {
-                r.setStatus(new PrimljenaConcreteState());
+                r.obradi();
             }
-        } 
-        else if (brojRezervacija <= maksBrojPutnika) 
-        {
-            for (Rezervacija r : aktivneRez) 
+            else if (count < maksBrojPutnika)
             {
-                r.setStatus(new AktivnaConcreteState());
+                r.aktiviraj();
+                count++;
             }
-        } 
-        else 
-        {
-            int aktivniCount = 0;
-            for (Rezervacija r : aktivneRez) 
+            else
             {
-                if (aktivniCount < maksBrojPutnika) 
-                {
-                    r.setStatus(new AktivnaConcreteState());
-                    aktivniCount++;
-                } 
-                else 
-                {
-                    r.setStatus(new NaCekanjuConcreteState());
-                }
+                r.staviNaCekanje();
             }
         }
-        
-        status.azuriraj(this, brojRezervacija);
     }
 
-    private void promovirajSaCekanja() 
+    private int getBrojAktivnihRezervacija()
     {
-        Rezervacija naCekanju = rezervacije.stream()
-                .filter(r -> r.getStatus() instanceof NaCekanjuConcreteState)
-                .min(Comparator
-                        .comparing(Rezervacija::getDatumVrijeme, LDT_ORDER)
-                        .thenComparingLong(Rezervacija::getRedniBroj))
-                .orElse(null);
-
-        if (naCekanju != null) 
-        {
-            naCekanju.setStatus(new AktivnaConcreteState());
-        }
+        return (int) rezervacije.stream()
+                .filter(r -> r.getStatus() instanceof AktivnaConcreteState)
+                .count();
     }
 
-    public boolean imaRezervaciju(String ime, String prezime) 
-    {
-        return rezervacije.stream()
-                .anyMatch(r -> equalsIgnorirajCase(r.getIme(), ime)
-                        && equalsIgnorirajCase(r.getPrezime(), prezime)
-                        && !(r.getStatus() instanceof OtkazanaConcreteState));
-    }
-
-    private boolean equalsIgnorirajCase(String rijec1, String rijec2) 
+    private boolean equalsIgnorirajCase(String rijec1, String rijec2)
     {
         String prvaRijec = (rijec1 == null) ? "" : rijec1.trim();
         String drugaRijec = (rijec2 == null) ? "" : rijec2.trim();
         return prvaRijec.equalsIgnoreCase(drugaRijec);
-    }
-    
-    public int getOznaka() 
-    { 
-        return oznaka; 
-    }
-    
-    public String getNaziv() 
-    { 
-        return naziv; 
-    }
-    
-    public String getProgram() 
-    { 
-        return program; 
-    }
-    
-    public LocalDate getPocetniDatum() 
-    { 
-        return pocetniDatum; 
-    }
-    
-    public LocalDate getZavrsniDatum() 
-    { 
-        return zavrsniDatum; 
-    }
-    
-    public LocalTime getVrijemeKretanja() 
-    { 
-        return vrijemeKretanja; 
-    }
-    
-    public LocalTime getVrijemePovratka() 
-    { 
-        return vrijemePovratka; 
-    }
-    
-    public float getCijena() 
-    { 
-        return cijena; 
-    }
-    
-    public int getMinBrojPutnika() 
-    { 
-        return minBrojPutnika; 
-    }
-    
-    public int getMaksBrojPutnika() 
-    { 
-        return maksBrojPutnika; 
-    }
-    
-    public int getBrojNocenja() 
-    { 
-        return brojNocenja; 
-    }
-    
-    public float getDoplataSobe() 
-    { 
-        return doplataSobe; 
-    }
-    
-    public String getPrijevoz() 
-    { 
-        return prijevoz; 
-    }
-    
-    public int getBrojDorucka() 
-    { 
-        return brojDorucka; 
-    }
-    
-    public int getBrojRucka() 
-    { 
-        return brojRucka; 
-    }
-    
-    public int getBrojVecera() 
-    { 
-        return brojVecera; 
-    }
-
-    public AranzmaniState getStatus() 
-    { 
-        return status; 
-    }
-    
-    public void setStatus(AranzmaniState status) 
-    { 
-        this.status = status; 
-    }
-    
-    public String getStatusNaziv() 
-    {
-        return status.getNaziv();
     }
 }
